<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search__main_menu"
        android:orderInCategory="5"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_main"
        android:orderInCategory="10"
        android:title="@string/btnCompassMain"
        android:icon="@android:drawable/ic_menu_compass"
        app:showAsAction="always" />
    <item
        android:id="@+id/add_note__main_menu"
        android:orderInCategory="20"
        android:title="@string/btnAddNewNote"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/more__main_menu"
        android:orderInCategory="50"
        android:title="@string/btnMoreMainMenu"
        app:showAsAction="never">
        <menu>
            <item android:id="@+id/some_item"
                android:orderInCategory="10"
                android:title="~ New Menu Item ~"
                android:icon="@android:drawable/ic_menu_edit"
                tools:ignore="HardcodedText" />
        </menu>
    </item>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>

