<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_backstack_settings"
            android:textSize="@dimen/settings_dimen" />

        <RadioButton
            android:id="@+id/radioButtonUseBackstack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/use_backstack"
            android:textSize="@dimen/settings_items_dimen" />

        <RadioButton
            android:id="@+id/radioButtonBackAsRemove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_as_remove_fragment"
            android:textSize="@dimen/settings_items_dimen" />
    </RadioGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchBlackTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_black_theme"
        android:textSize="@dimen/settings_dimen" />

</LinearLayout>